# occwrapper

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/occwrapper/: TopoDS_Compound.hpp  brep_adapter.h  brep_adapter.hpp  brep_builder.h  brep_builder.hpp  brep_tool.h  brep_tool.hpp  brepalgoapi.h  brepalgoapi.hpp  brepfilletapi.h  brepgprop.h  brepgprop.hpp  brepmesh.h  brepmesh.hpp  brepprimapi.h  brepprimapi.hpp  breptools.h  breptools.hpp  gcpnts.h  geom_Curve.hpp  geom_adapter.h  geom_adapter.hpp  geom_curve.h  geom_curve.hpp  geomlprop_slprops.h  geomlprop_slprops.hpp  gp_Ax1.hpp  gp_Ax2.hpp  gp_Ax3.hpp  gp_Circ.hpp  gp_Dir.hpp  gp_Pln.hpp  gp_Pnt.hpp  gp_Trsf.hpp  gp_Types.hpp  gp_Vec.hpp  gp_ax1.h  gp_ax1.hpp  gp_ax2.h  gp_ax2.hpp  (+32 more)
src/: CMakeLists.txt  Config.cmake.in  TopoDS_Compound.cpp  brep_adapter.cpp  brep_builder.cpp  brep_tool.cpp  brepalgoapi.cpp  brepfilletapi.cpp  brepgprop.cpp  brepmesh.cpp  brepprimapi.cpp  breptools.cpp  gcpnts.cpp  geom_Curve.cpp  geom_adapter.cpp  geom_curve.cpp  geomlprop_slprops.cpp  gp_Ax1.cpp  gp_Ax2.cpp  gp_Ax3.cpp  gp_Circ.cpp  gp_Dir.cpp  gp_Pln.cpp  gp_Pnt.cpp  gp_Trsf.cpp  gp_Vec.cpp  gp_ax1.cpp  gp_ax2.cpp  gp_ax3.cpp  gp_circ.cpp  gp_dir.cpp  gp_pln.cpp  gp_pnt.cpp  gp_quaternion.cpp  gp_trsf.cpp  gp_vec.cpp  gprop.cpp  occutils.cpp  occwrapper.pc.in  stepcontrol_writer.cpp  (+6 more)
